--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,33 @@
           </filesets>
         </configuration>
       </plugin>
+      <!-- +++ Plugin that add the coverage reports to coveralls.io ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+      <plugin>
+        <groupId>org.eluder.coveralls</groupId>
+    	<artifactId>coveralls-maven-plugin</artifactId>
+    	<version>4.1.0</version>
+    	<configuration>
+          <repoToken>8devGek2l8n13wZQpncyVI9b8TLU1bSjS</repoToken>
+    	</configuration>
+      </plugin>
+	  <plugin>
+        <groupId>org.jacoco</groupId>
+    	<artifactId>jacoco-maven-plugin</artifactId>
+    	<version>0.7.6.201602180812</version>
+    	<configuration>
+          <excludes>
+           <!-- <exclude>**/Main.class</exclude> -->
+          </excludes>
+    	</configuration>
+    	<executions>
+          <execution>
+            <id>prepare-agent</id>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+        </executions>
+	  </plugin>
       <!-- +++ Plugin that generate javadocs for the specified project: ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
